# demo

./: README.md  linux-shell-demo.c  parse_shell_output.c
CPU/: 1.段描述符与段选择子.md  10.物理页属性.md  12.分页：2-9-9-12.md  13.TLB.md  14.TLB番外篇ShadowWalker.md  15.控制寄存器.md  17.驱动.md  18.3环PEB断链.md  2.JMP FAR 跨段跳转.md  20.DriverSection遍历内核模块链表.md  21.定位未导出函数.md  22.驱动Demo.md  23.MessageBox 监视器 ShellCode.md  24.驱动层文件操作.md  27.系统调用.md  28.系统调用内核结构体.md  29.系统调用-系统服务表.md  3.CALL FAR 跨段跳转并提权(调用门).md  3.CALL FAR 跨段跳转并提权.md  3.跨段跳转并提权.md  5.陷阱门.md  6.任务状态段TSS.md  8.分页：10-10-12.md  9.修改 PTE 实现挂物理页读写空指针.md
CPU&OS/: 1.段描述符与段选择子.md  16.保护模式阶段测试.md  26.项目练习-MessageBoxA 监视器(过写拷贝，不使用 shellcode 注入).md  30.系统调用SSDT.md  4.中断门.md  7.任务门.md
CppLibCurl/: Makefile  Makefile.win32  http_client.cpp  http_client.h
DuiLibControlDemos/: DuiLibControlDemos.sln
automake-across-platform-bin/src/: Makefile  Makefile.am  Makefile.in  cscope.in.out  cscope.out  cscope.po.out  main.cpp  tags
automake-across-platform-bin/src/.deps/: add.Plo  as_user.Plo  as_user.Po  base64.Plo  base64.Po  cfg_op.Plo  cfg_op.Po  cjson.Plo  cjson.Po  logger.Plo  logger.Po  main.Po  qdp_host-as_user.Po  qdp_host-base64.Po  qdp_host-cfg_op.Po  qdp_host-cjson.Po  qdp_host-logger.Po  qdp_host-main.Po  qdp_host-utf8.Po  qdp_host-win_common.Po  utf8.Plo  utf8.Po  vd_host-main.Po  win_common.Plo  win_common.Po
automake-across-platform-bin/src/common/: list.h  logger.cpp  utf8.cpp  vd_global.h
automake-across-platform-bin/src/common/.deps/: qdp_host-base64.Po  qdp_host-cfg_op.Po  qdp_host-cjson.Po  qdp_host-logger.Po  qdp_host-utf8.Po  vd_host-base64.Po  vd_host-cfg_op.Po  vd_host-cjson.Po  vd_host-logger.Po  vd_host-utf8.Po
automake-across-platform-bin/src/linux/: lin_server.cpp  lin_server.h
automake-across-platform-bin/src/linux/.deps/: qdp_host-lin_server.Po  vd_host-lin_server.Po
automake-across-platform-bin/src/windows/: as_user.cpp  as_user.h  win_common.cpp  win_common.h  win_server.cpp  win_server.h
automake-across-platform-bin/src/windows/.deps/: qdp_host-as_user.Po  qdp_host-win_common.Po  vd_host-as_user.Po  vd_host-win_common.Po  vd_host-win_server.Po
automake-project/common/: Makefile  Makefile.am  Makefile.in  add.cpp
automake-project/protocol/: Makefile  Makefile.am  Makefile.in  add_ext.cpp  add_ext.h  libprotocol-1.0.0.pc  libprotocol-1.0.0.pc.in
(+303 files in other folders)
